# licenses

./: .gitignore  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_01_25_2021-c90075c83d64_create_customers_table.py  2025_01_26_0122-d5fa41d930b7_create_customers_objects_services_.py
api/auth/: passwords_factory.py  register.py  schemas.py  users_factory.py  views.py
api/customers/: crud.py
api/licenses/: crud.py
api/objects/: crud.py
api/services/: crud.py
api/settings/: __init__.py  generate_key.py  validation.py
core/: config.py  database.db  database.db-shm  database.db-wal
core/models/: __init__.py  base.py  customers.py  database_helper.py  licenses.py  objects.py  services.py  users.py
myvenv/: pyvenv.cfg
myvenv/Scripts/: activate  activate.bat
